# universal-db-mcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.test.yaml  default.yaml  testing.db  testing_seed.sql
config/mysql/: init.sql
k8s/: configmap.yaml  deployment.yaml  service.yaml
src/universal_db_mcp/: __init__.py  config.py  database.py  main.py  runner.py  security.py  server.py  tools.py
tests/: conftest.py  test_config.py  test_database.py  test_runner.py  test_tools.py
